--- a/index.html
+++ b/index.html
@@ -15,16 +15,48 @@
             </ul>
         </div>
         <div class="hero">
-
+            <div class="hero-left">
+                <p class="hero-main-text">This website is awesome</h1>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
+                <button class="herobutton" type="button">Sign Up</button>
+            </div>
+            <div class="hero-right">
+                <img class="heroimg" src="#">
+            </div>
         </div>
         <div class="infocards">
-
+            <div class="infotitle">Some random information!</div>
+            <div class="cards">
+                <div class="card">
+                    <img class="infoimg" src="#">
+                    <div class="infotext">this is some subtext under and illustration or image</div>
+                </div>
+                <div class="card">
+                    <img class="infoimg" src="#">
+                    <div class="infotext">this is some subtext under and illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="#" class="infoimg">
+                    <div class="infotext">this is some subtext under and illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="#" class="infoimg">
+                    <div class="infotext">this is some subtext under and illustration or image</div>
+                </div>
+            </div>
         </div>
         <div class="quote">
-
+            <p class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quoteauthor">-Thor, God of Thunder</p>
         </div>
         <div class="signup">
-
+            <div class="signup-left">
+                <p class="signuptext"><strong>Call to action! It's time!</strong></p>
+                <p class="signuptext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-right">
+                <button class="signupbutton" type="button">Sign up</button>
+            </div>
         </div>
         <div class="footer">
 
