added footer and edits

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="signup">
             <div class="signup-left">
-                <p class="signuptext"><strong>Call to action! It's time!</strong></p>
+                <h2 class="signuptext"><strong>Call to action! It's time!</strong></h2>
                 <p class="signuptext">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="signup-right">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="footer">
-
+            <p class="footer-text">Copyright The Odin Project 2021</p>
         </div>
     </body>
 </html>
